--- a/flink-metrics/flink-metrics-databus/pom.xml
+++ b/flink-metrics/flink-metrics-databus/pom.xml
@@ -140,7 +140,13 @@ under the License.
 			<artifactId>log4j2-lang-nonspring</artifactId>
 			<version>${logging.version}</version>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.apache.flink</groupId>
+            <artifactId>flink-kubernetes_2.11</artifactId>
+			<version>${project.version}</version>
+			<scope>provided</scope>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
