--- a/flink-metrics/flink-metrics-databus/src/test/resources/log4j2-test.properties
+++ b/flink-metrics/flink-metrics-databus/src/test/resources/log4j2-test.properties
@@ -18,7 +18,8 @@
 
 # Set root logger level to OFF to not flood build logs
 # set manually to INFO for debugging purposes
-log4j.rootLogger=INFO, testlogger
+rootLogger.level = INFO
+rootLogger.appenderRef.test.ref = TestLogger
 
 # A1 is set to be a ConsoleAppender.
 log4j.appender.testlogger=org.apache.log4j.ConsoleAppender
