[#4552825] report job execution latency of scheduling

--- a/flink-metrics/flink-metrics-opentsdb/src/main/resources/metrics-whitelist-htap.yaml
+++ b/flink-metrics/flink-metrics-opentsdb/src/main/resources/metrics-whitelist-htap.yaml
@@ -38,6 +38,8 @@ non-global:
         numFinishedJobs,
       # Flink job run duration
         jobDuration,
+      # Flink job latency until scheduled
+        jobLatencyUntilScheduled,
       # TaskManager / Slot
         numRegisteredTaskManagers,
         numPendingTaskManagerSlots,
