[#4639469] running flink on k8s by arcee operator

--- a/flink-kubernetes/pom.xml
+++ b/flink-kubernetes/pom.xml
@@ -70,6 +70,12 @@ under the License.
 			<version>${kubernetes.client.version}</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.bytedance.openplatform</groupId>
+			<artifactId>arcee-sdk</artifactId>
+			<version>fabric8_4.9.2-1.0.0.3</version>
+		</dependency>
+
 		<!-- test dependencies -->
 		<dependency>
 			<groupId>io.fabric8</groupId>
@@ -142,6 +148,7 @@ under the License.
 									<include>org.yaml:*</include>
 									<include>com.mifmif:*</include>
 									<include>dk.brics.automaton:*</include>
+									<include>com.bytedance.openplatform:arcee-sdk</include>>
 
 									<include>META-INF/services/org.apache.flink.*</include>
 								</includes>
@@ -192,6 +199,10 @@ under the License.
 								<relocation>
 									<pattern>dk.brics.automaton</pattern>
 									<shadedPattern>org.apache.flink.kubernetes.shaded.dk.brics.automaton</shadedPattern>
+								</relocation>
+								<relocation>
+									<pattern>com.bytedance.openplatform.arcee</pattern>
+									<shadedPattern>org.apache.flink.kubernetes.shaded.com.bytedance.openplatform.arcee</shadedPattern>
 								</relocation>
 							</relocations>
 						</configuration>
