[#4538689] support gas log to serverless flink

--- a/flink-dist-tob/src/main/flink-bin/conf/log4j.properties
+++ b/flink-dist-tob/src/main/flink-bin/conf/log4j.properties
@@ -19,10 +19,11 @@
 # This affects logging for both user code and Flink
 shutdownHook                        = disable
 rootLogger.level                    = INFO
-rootLogger.appenderRefs             = console,file,rolling
+rootLogger.appenderRefs             = console,file,rolling,gas
 rootLogger.appenderRef.console.ref  = ConsoleAppender
 rootLogger.appenderRef.file.ref     = MainAppender
 rootLogger.appenderRef.rolling.ref  = ByteRollingFile
+rootLogger.appenderRef.gas.ref      = gas-appender
 
 # The following lines keep the log level of common libraries/connectors on
 # log level INFO. The root logger does not override this. You have to manually
@@ -54,7 +55,7 @@ appender.main.layout.pattern        = %d{yyyy-MM-dd HH:mm:ss,SSS} %-5p %-60c - %
 logger.netty.name                   = org.apache.flink.shaded.akka.org.jboss.netty.channel.DefaultChannelPipeline
 logger.netty.level                  = OFF
 
-#tos appender
+#tos appender(it will be deprecated in the feature versions)
 logger.rolling.name                 = com.bytedance
 logger.rolling.level                = INFO
 appender.rolling.type               = ByteRollingFile
@@ -69,7 +70,6 @@ appender.rolling.strategy.type      = DefaultRolloverStrategy
 #
 appender.rolling.policies.size.size = 10MB
 appender.rolling.strategy.max       = 10
-
 #
 property.regionId                   = ${env:LOG.TOS.REGION_ID}
 property.bucket                     = ${env:LOG.TOS.BUCKET}
@@ -77,3 +77,26 @@ property.filePathTemplate           = flink/${env:INSTANCE_ID}/${env:WORKSPACE_I
 property.tosEndpoint                = ${env:LOG.TOS.ENDPOINT}
 property.accessKeyId                = ${env:LOG.TOS.AK}
 property.accessKeySecret            = ${env:LOG.TOS.SK}
+
+# gas appender
+appender.gas.type = GAS
+appender.gas.name = gas-appender
+#appender.gas.endpoint = http://daemon.bytedance.com:8080/  https://gas-log-proxy-boe.byted.org/
+appender.gas.endpoint = ${env:LOG.GAS_ENDPOINT}
+appender.gas.topic = openstudio-job-logs
+appender.gas.sync = true
+appender.gas.parallelism = ${env:LOG.PARALLELISM:-2}
+appender.gas.accountId = ${env:LOG.ACCOUNT_ID}
+appender.gas.project = ${env:LOG.PROJECT_ID}
+appender.gas.application = ${env:LOG.APPLICATION_ID}
+appender.gas.deployment = ${env:LOG.DEPLOYMENT_ID}
+appender.gas.user = ${env:LOG.USER_ID}
+appender.gas.fields.type = fields
+appender.gas.fields.flink_application_component.type = field
+appender.gas.fields.flink_application_component.name = flink_application_component
+appender.gas.fields.flink_application_component.value = ${env:_FLINK_COMPONENT}
+appender.gas.fields.flink_pod_name.type = field
+appender.gas.fields.flink_pod_name.name = flink_pod_name
+appender.gas.fields.flink_pod_name.value = ${env:HOSTNAME}
+appender.gas.layout.type = PatternLayout
+appender.gas.layout.pattern = %d{yyyy-MM-dd HH:mm:ss,SSS} %-5p %-60c - %m%n
