[#4667343] Modify log4j Databus appender level on TaskManager to FATAL

--- a/flink-dist/src/main/flink-bin/conf/log4j.properties
+++ b/flink-dist/src/main/flink-bin/conf/log4j.properties
@@ -22,7 +22,7 @@ log4j.rootLogger=${log.level}, file, databus
 log4j.appender.databus=com.bytedance.data.databus.DatabusAppender
 log4j.appender.databus.channel=${log.databus.channel}
 log4j.appender.databus.layout=org.apache.log4j.PatternLayout
-log4j.appender.databus.threshold=WARN
+log4j.appender.databus.threshold=${log.databus.level}
 log4j.appender.databus.layout.ConversionPattern=db4jv3 %X{ip} %X{hadoop_user} %X{pid} %X{cid} %d{yyyy-MM-dd_HH:mm:ss} %X{yarn_job} %X{yarn_queue} %p %c{1}: %m
 
 
