--- a/flink-connectors/flink-connector-abase/pom.xml
+++ b/flink-connectors/flink-connector-abase/pom.xml
@@ -33,7 +33,7 @@ under the License.
 		<dependency>
 			<groupId>com.bytedance</groupId>
 			<artifactId>java-abase-client</artifactId>
-			<version>2.4.3-POOLFIX</version>
+			<version>2.4.3-POOLFIX-2</version>
 			<exclusions>
 				<exclusion>
 					<groupId>org.slf4j</groupId>
