[#4633534] Add metrics for KubernetesResourceManager

--- a/flink-metrics/flink-metrics-opentsdb/src/main/resources/metrics-whitelist.yaml
+++ b/flink-metrics/flink-metrics-opentsdb/src/main/resources/metrics-whitelist.yaml
@@ -230,6 +230,7 @@ non-global:
         startingRedundantContainerNum,
         containerStartDurationMaxMs,
         speculativeSlowContainerTimeoutMs,
+        pendingPhasePods,
       # gang
         gangFailedNum,
         gangDowngradeNum,
