[#4675320] add query_count in metrics-whitelist-htap.yaml

--- a/flink-metrics/flink-metrics-opentsdb/src/main/resources/metrics-whitelist-htap.yaml
+++ b/flink-metrics/flink-metrics-opentsdb/src/main/resources/metrics-whitelist-htap.yaml
@@ -75,6 +75,7 @@ non-global:
         job_count,
         result_count,
         instance_count,
+        query_count,
         query_phase_latency,
         latency,
       # jm threadPool usage
