[#4676696] Add slow query log for htap

--- a/flink-metrics/flink-metrics-opentsdb/src/main/resources/metrics-whitelist-htap.yaml
+++ b/flink-metrics/flink-metrics-opentsdb/src/main/resources/metrics-whitelist-htap.yaml
@@ -36,8 +36,11 @@ non-global:
         numFailedJobs,
         numCanceledJobs,
         numFinishedJobs,
+        numSlowJobs,
       # Flink job run duration
         jobDuration,
+      # Flink failed job duration
+        failedJobDuration,
       # Flink job latency until scheduled
         jobLatencyUntilScheduled,
       # TaskManager / Slot
