[#4716020] feat: overload protection on jm

--- a/flink-metrics/flink-metrics-opentsdb/src/main/resources/metrics-whitelist-htap.yaml
+++ b/flink-metrics/flink-metrics-opentsdb/src/main/resources/metrics-whitelist-htap.yaml
@@ -37,6 +37,7 @@ non-global:
         numCanceledJobs,
         numFinishedJobs,
         numSlowJobs,
+        numRejectedJobs,
       # Flink job run duration
         jobDuration,
       # Flink failed job duration
