--- a/flink-dist/src/main/resources/flink-conf.yaml
+++ b/flink-dist/src/main/resources/flink-conf.yaml
@@ -229,7 +229,7 @@ common:
 
   # ipv6
   ipv6.enabled: false
-  ipv6.supported.cluster: leser,quoka,quaga,hippo
+  ipv6.supported.cluster: leser,quoka,quaga,hippo,quiet
 
   # hdfs conf for checkpoint
   flink.checkpoint.hdfs.dfs.datanode.socket.write.timeout: 30000
@@ -555,10 +555,11 @@ quinc:
 quiet:
   dc: cn
   clusterName: quiet
-  high-availability.zookeeper.quorum: 10.129.16.103:2181,10.129.19.99:2181,10.129.36.17:2181,10.129.42.156:2181,10.129.42.93:2181
+  high-availability.zookeeper.quorum: fdbd:dc03:2:2::103:2181,fdbd:dc03:2:14::99:2181,fdbd:dc03:2:81::17:2181,fdbd:dc03:2:107::156:2181,fdbd:dc03:2:106::93:2181
   hdfs.prefix: hdfs://haruna/flink_lq
   checkpoint.hdfs.prefix: hdfs://haruna/home/byte_flink_checkpoint
   flink.jobmanager.yarn.config.yarn.client.nodemanager-connect.max-wait-ms: 10000
+  ipv6.enabled: true
 
 queen:
   dc: cn
