--- a/pom.xml
+++ b/pom.xml
@@ -1511,6 +1511,7 @@ under the License.
 						<exclude>flink-connectors/flink-connector-bmq/src/test/java/org/apache/flink/connector/bmq/generated/*.java</exclude>
 						<exclude>flink-connectors/flink-connector-bmq/src/test/resources/**</exclude>
 						<exclude>flink-connectors/flink-connector-preview/src/test/resources/**</exclude>
+						<exclude>flink-connectors/flink-connector-abase/src/test/resources/**</exclude>
 						<exclude>flink-end-to-end-tests/flink-tpcds-test/tpcds-tool/answer_set/*</exclude>
 						<exclude>flink-end-to-end-tests/flink-tpcds-test/tpcds-tool/query/*</exclude>
 
